2004-08-22  MenTaLguY <mental@rydia.net>

	* src/Makefile_insert, src/gc-alloc.h:

	  introduced a GC-aware STL allocator

	* src/document-private.h, src/document.h, src/document.cpp:

	  switch to using STL map for "id changed" signals

2004-08-21  MenTaLguY <mental@rydia.net>

	* src/Makefile_insert, src/util/Makefile_insert: get libinkutil
	  deps straightened out

	* src/document-private.h, src/document-undo.cpp, src/document.cpp:

	  adapt for new APIs, header cleanups/refactorings

	* src/gc-core.h, src/gc-anchored.h, src/gc-finalized.h, src/gc-managed.h:

	  rewrote interface to Boehm GC for increased flexibility; there are now
	  three main classes:
	  
	   - Inkscape::GC::Managed: objects managed by the GC; replaces
	                            Inkscape::GC::Object

	   - Inkscape::GC::Finalized: objects for which the GC will call
	                              destructors automatically; replaces
								  Inkscape::GC::FinalizedObject

	   - Inkscape::GC::Anchored: managed objects which can be 'anchored'
	                             to prevent collection while non-gc-aware
								 objects are holding references; replaces
								 Inkscape::Refcounted

      Note that they no longer inherit from each other(!), so you will
	  need to mix-and-match via multiple inheritance.  The latter two
	  don't do anything useful without the first, however.

	* src/gc-object.h, src/refcounted.h: removed

	* src/message-context.cpp, src/message-stack.h, src/selection.h,
	  src/view.cpp, src/libnr/nr-object.h, src/util/list.h,
	  src/xml/sp-repr-attr.h, src/xml/sp-repr-listener.h, src/desktop.cpp:

	  adopt new GC API and header refatorings

	* src/Makefile.am, src/util/Makefile_insert:
	
	  list util/* files in util's Makefile_insert now.

	* src/util/reverse.h: revive anx fix Inkscape::Util::reverse

	* src/util/share-c-string.cpp, src/util/share-c-string.h: removed

	* src/util/shared-c-string.cpp, src/util/shared-c-string.h:
